letter spacing fix

--- a/public/app/front-react/shared/components/NewsDetail/style.scss
+++ b/public/app/front-react/shared/components/NewsDetail/style.scss
@@ -133,7 +133,7 @@
             p {
                 margin-bottom: rem(21);
 
-                letter-spacing: rem(-.35);
+                // letter-spacing: rem(-.35);
             }
             a {
                 outline: none;
@@ -219,7 +219,7 @@
             margin-top: rem(51);
             margin-bottom: rem(15);
 
-            letter-spacing: rem(-.5);
+            // letter-spacing: rem(-.5);
         }
 
         &__box-preview {
@@ -246,7 +246,7 @@
 
             font: #{rem(16)}/ #{rem(24)} $stemBold;
             color: $white;
-            letter-spacing: rem(-.8);
+            // letter-spacing: rem(-.8);
 
             background-image: url(/content/about/box-text.png);
             background-position: center;
@@ -329,7 +329,7 @@
             margin-top: rem(30);
 
             > p {
-                letter-spacing: rem(-0.35);
+                // letter-spacing: rem(-0.35);
             }
 
         }
@@ -488,7 +488,7 @@
             font-size: rem(16);
             line-height: rem(24);
             color: $enter;
-            letter-spacing: rem(-0.45);
+            // letter-spacing: rem(-0.45);
         }
 
         &--wide {
